--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -20,7 +20,7 @@
   animation: spin 3s linear infinite;
   fill: rgb(228, 0, 0);
   width: 30%;
-  margin-top: 50%;
+  margin-top: 25%;
   justify-self: center;
 }
 
@@ -29,5 +29,11 @@
   width: 350px;
   height: 25px;
   margin-top: 10em;
-  margin-bottom: 20em;
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  border-radius: 5px;
 }
