Solved the color passing puzzle! Passed the beatConductor variable to the Aleph component to track the number of the measure to access the rgba color value at that index. It works

--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -20,8 +20,8 @@
   grid-template-rows: 1 / 2;
   animation: spin 10s linear infinite;
   fill: rgb(255, 255, 255);
-  width: 30%;
   margin-top: 20%;
+  transform: scale(25%);
   justify-self: center;
 }
 
