--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -1,6 +1,6 @@
 .App {
   display: grid;
-  grid-template: 50% 25% 1fr/ auto;
+  grid-template: auto 25% 1fr/ auto;
   text-align: center;
   background-image: url('./resources/tumblr_mys9xiZQAM1sxm8cbo1_500.jpeg');
   background-repeat: no-repeat;
@@ -46,4 +46,5 @@ button {
 
 .footer {
   grid-row: 3 / 4;
+  color: white;
 }
