--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -1,10 +1,18 @@
 .App {
+  position: relative;
   display: grid;
   grid-template: auto 25% 1fr/ auto;
   text-align: center;
   background-image: url('./resources/tumblr_mys9xiZQAM1sxm8cbo1_500.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.blipz-animation-overlay {
+  position: absolute;
+  height: 65%;
+  width: 100%;
+  z-index: 3;
 }
 
 @keyframes spin {
@@ -16,12 +24,16 @@
   }
 }
 
+.aleph-container {
+  grid-row: 1 / 2;
+display: flexbox;
+justify-items: center;
+padding: 5% 15%;
+}
+
 .aleph { 
-  grid-template-rows: 1 / 2;
   animation: spin 10s linear infinite;
   fill: rgb(255, 255, 255);
-  margin-top: 20%;
-  justify-self: center;
 }
 
 .search-field {
@@ -45,6 +57,7 @@ button {
 }
 
 .footer {
+  text-align: right;
   grid-row: 3 / 4;
   color: white;
 }
