--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -1,11 +1,12 @@
 .App {
   position: relative;
   display: grid;
-  grid-template: auto 25% 1fr/ auto;
+  grid-template-rows: 90% 5% 27%;
   text-align: center;
   background-image: url('./resources/tumblr_mys9xiZQAM1sxm8cbo1_500.jpeg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  height: 100%;
 }
 
 .blipz-animation-overlay {
@@ -34,7 +35,7 @@
 }
 
 .aleph-container {
-  grid-row: 1 / 2;
+  grid-row: 1;
 display: flexbox;
 justify-items: center;
 padding: 5% 15%;
@@ -42,15 +43,14 @@ padding: 5% 15%;
 
 .aleph { 
   animation: spin 10s linear infinite;
-  fill: rgb(255, 255, 255);
+  margin-top: 15%;
 }
 
 .search-field {
-  grid-row: 1;
+  grid-row: 2;
   text-align: center;
   width: 50%;
   height: 10%;
-  margin-bottom: 10%;
 }
 
 .appear {
@@ -61,13 +61,38 @@ padding: 5% 15%;
   border-radius: 5px;
 }
 
-.control {
-  margin-bottom: 25%;
-  margin-top: 20%;
+button {
+  margin: 0 5%;
+  width: 7em;
+  height: 3em;
 }
+
+/* .control {
+} */
 
 .footer {
   text-align: right;
   grid-row: 3 / 4;
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .App {
+    grid-template-rows: 10% 75%;
+  }
+
+  .search-field {
+    grid-row: 1;
+    text-align: center;
+    width: 50%;
+    height: 10%;
+    margin-top: 10%
+  }
+
+  .aleph-container {
+    grid-row: 2;
+    display: flexbox;
+    justify-items: center;
+    padding: 5% 15%;
+  }
 }
