--- a/planning/beat-test/src/App.css
+++ b/planning/beat-test/src/App.css
@@ -1,6 +1,15 @@
 .App {
   display: grid;
-  grid-template-areas: 1fr auto / auto;
+  grid-template-areas: auto/ 1fr 1fr;
+  height: 100%;
+  width: 100%;
+}
+
+.canvas {
+  grid-column: 2;
+  grid-row: 1 / 3;
+  height:75%;
+  width: 100%;
 }
 
 @keyframes spin {
@@ -13,6 +22,7 @@
 }
 
 .aleph {
+  grid-column: 1;
   animation: spin 3s linear infinite;
   fill: rgb(118, 0, 0);
   width: 50%;
@@ -21,6 +31,7 @@
 }
 
 button {
+  grid-column: 1;
   justify-self: center;
   width: 100px;
   height: 50px;
