--- a/planning/tone-test/src/App.css
+++ b/planning/tone-test/src/App.css
@@ -1,8 +1,3 @@
-.App {
-  display: grid;
-  grid-template-areas: 1fr 1fr  / auto;
-}
-
 @keyframes spin {
   from {
     transform: rotate3d(0, 0, 0, 0deg);
@@ -10,6 +5,43 @@
   to {
     transform: rotate3d(1, 1, 1, 360deg);
   }
+}
+
+.App {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr, 2fr;
+  background-color: black;
+}
+
+.top {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-row: 1;
+}
+
+.aleph-container {
+  display: flexbox;
+  justify-content: center;
+  grid-column: 1;
+  grid-row: 1;
+  background-image: url('./doodle_in_black_and_white_by_layla_rose_d1m4nvm.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-top: 10%;
+  padding-left: 10%;
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+}
+
+.aleph {
+  animation: spin 3s linear infinite;
+  fill:white;
+}
+
+.control-panel {
+  grid-row: 1;
+  grid-column: 2;
 }
 
 .button {
@@ -21,17 +53,6 @@
 }
 
 
-.aleph {
-  animation: spin 3s linear infinite;
-  fill: red;
-  width: 50%;
-  margin-top: 10%;
-  justify-self: center;
-}
-
-/* .blip {
-
-} */
 
 form {
   margin: 20px 0 10px 25%;
@@ -40,4 +61,8 @@ form {
 input {
   margin: 5px 0 5px 0;
   width: 300px;
+}
+
+footer {
+  color: white;
 }
