--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -1,21 +1,3 @@
-.App {
-  position: relative;
-  display: grid;
-  grid-template-rows: 85% 10% 5%;
-  text-align: center;
-  background-image: url('./resources/tumblr_mys9xiZQAM1sxm8cbo1_500.jpeg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 100%;
-}
-
-.blipz-animation-overlay {
-  position: absolute;
-  height: 65%;
-  width: 100%;
-  z-index: 3;
-}
-
 @keyframes spin {
   from {
     transform: rotate3d(0, 0, 0, 0deg);
@@ -30,28 +12,76 @@
     opacity: 0%;
   }
   to {
-    opacity: 100%
+    opacity: 100%;
   }
 }
 
-.aleph-container {
-  grid-row: 1;
-display: flexbox;
-justify-items: center;
-padding: 5% 15%;
-}
-
-.aleph { 
-  animation: spin 10s linear infinite;
-  margin-top: 15%;
-}
-
-.search-field {
-  grid-row: 2;
+.App {
+  display: grid;
+  background-color: black;
+  grid-template-rows: 1fr 1fr auto;
+  grid-template-columns: 1fr 3fr;
   text-align: center;
-  width: 50%;
-  height: 10%;
+  height: 100%;
 }
+
+.about {
+  background-color: black;
+  color: white;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.controls {
+  grid-column: 1;
+  grid-row: 2;
+  color: white;
+  background-color: black;
+  padding-top: 15%;
+}
+
+select {
+  width: 100%;
+}
+
+.footer {
+  text-align: right;
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+  background-color: black;
+  color: white;
+}
+
+/* .top {
+  grid-row: 1;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr /  2fr;
+  height: 100%;
+}
+
+.aleph-container {
+  grid-column: 1;
+  background-image: url('./resources/tumblr_mys9xiZQAM1sxm8cbo1_500.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flexbox;
+  justify-items: center;
+}
+
+.aleph {
+  animation: spin 10s linear infinite;
+}
+
+
+.blipz {
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+  height: 100%;
+  width: 100%;
+  border: 2px solid white;
+}
+
 
 .appear {
   animation: appear 1s ease-in;
@@ -59,22 +89,14 @@ padding: 5% 15%;
 }
 
 button {
-  margin: 0 5%;
+  margin: 5% 5%;
   width: 7em;
   height: 3em;
 }
 
-.footer {
-  text-align: right;
-  grid-row: 3 / 4;
-  background-color: black;
-  color: white;
+
+/* @media screen and (min-width: 440) {
 }
-
-@media screen and (min-width: 440) {
-
-}
-
 
 @media screen and (min-width: 768px) {
   .App {
@@ -83,17 +105,16 @@ button {
 
   .search-field {
     grid-row: 1;
-    text-align: center;
     width: 50%;
     height: 10%;
-    margin-top: 5%
+    margin-bottom: 10%;
   }
 
   .aleph-container {
     grid-row: 2;
     display: flexbox;
     justify-items: center;
-    padding: 5% 15%;
+    padding: 15%;
   }
 
   .appear {
@@ -103,4 +124,4 @@ button {
   .blipz-animation-overlay {
     grid-row: 2;
   }
-}
+} */ 
