Added the wind-catcher to the animation Will still need to adjust the swing for different screen sizes

--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -19,19 +19,25 @@
 @keyframes swing {
   /* 0% {transform: rotate(0deg);
     transform-origin: 0px 0px}; */
-  25% {transform: rotate(5deg);
+  50% {transform: rotate(5deg);
     transform-origin: 5px 8px;}
   /* 50% {transform: rotate(0deg);
     transform-origin: 0px 0px}; */
-  75%{transform: rotate(-5deg);
-    transform-origin: 5px 8px;}
+  /* 66%{transform: rotate(0deg);
+    transform-origin: 0px 0px;} */
 }
 
-@keyframes swing-2 {
-  30% {transform: rotate(3deg);
-  transform-origin: 5px 8px;}
-  60%{transform: rotate(-3deg);
-  transform-origin: 5px 8px;}
+@keyframes rope-swing {
+  50% {transform: rotate(3deg);
+  transform-origin: 3px 5px;}
+  /* 60%{transform: rotate(-3deg);
+  transform-origin: 5px 8px;} */
+}
+
+@keyframes anchor-swing {
+  50% {transform: translateX(-75%);}
+  /* 60%{transform: rotate(-3deg);
+  transform-origin: 5px 8px;} */
 }
 
 .App {
@@ -75,50 +81,68 @@ select {
 .center-rope {
   position:absolute;
   margin:5px;
+  top: 8%;
   left: 48%;
   background:#84532a;
   height:75%;
   width: 2%;
+  transform: rotate(-3deg);
+  transform-origin: 3px 5px;
+  animation: rope-swing 5s infinite ease-in-out
 }
 
 .chime {
   position:absolute;
   margin:5px;
   top: 10%;
-  background:#d9eded;
+  background:#caffff;
   border-radius: 10px;
   width:5%;
-  animation: swing 3s infinite ease
+  transform: rotate(-5deg);
+  transform-origin: 5px 8px;
+  animation: swing 3s infinite ease-in-out
 }
 
 .chime-1 {
-  left:23%;
-  height:20%;
+  left:21%;
+  height:10%;
 }
 
 .chime-2 {
-  left:33%;
+  left:31%;
   height:30%;
 }
 
 .chime-3 {
-  left:43%;
-  height:40%;
+  left:41%;
+  height:20%;
 }
 
 .chime-4 {
-  left:50%;
-  height:40%;
+  left:51%;
+  height:35%;
 }
 
 .chime-5 {
-  left:60%;
-  height:40%;
+  left:61%;
+  height:25%;
 }
 
 .chime-6 {
-  left:70%;
-  height:40%;
+  left:71%;
+  height:15%;
+}
+
+.wind-anchor {
+  position: absolute;
+  bottom: 15%;
+  left: 45%;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(255, 224, 98);
+  transform: translateX(50%);
+  animation: anchor-swing 5s infinite ease-in-out;
 }
 
 .footer {
