More display tweaks for mobile

--- a/aleph/src/App.css
+++ b/aleph/src/App.css
@@ -40,7 +40,7 @@
 
 @keyframes anchor-swing {
   50% {
-    transform: translateX(-60%);
+    transform: translateX(-50%);
   }
   /* 60%{transform: rotate(-3deg);
   transform-origin: 5px 8px;} */
@@ -49,7 +49,7 @@
 .App {
   display: grid;
   background-color: black;
-  grid-template-rows: 1fr 4fr 3em;
+  grid-template-rows: 1fr 3fr 3em;
   text-align: center;
   height: 100%;
 }
@@ -75,11 +75,19 @@
   width: 100%;
 } */
 
-.windchimes-container {
+.main {
+  display: flex;
+  justify-content: center;
   grid-row: 2;
+}
+
+.windchimes-container {
   position: relative;
   color: rgb(255, 255, 255);
-  background-color: rgb(78, 62, 62);
+  background-image: url('./resources/pustynia-namib-diuny-nebo-zviozdy-desert-namib-dunes-sky-sta.jpeg');
+  background-size: cover;
+  width: 390px;
+  height: 600px;
 }
 
 .center-rope {
@@ -173,13 +181,6 @@
 
 @media screen and (min-width: 440) {
 
-  .App {
-    grid-template-rows: 1fr 4fr;
-  }
-
-  .windchimes-container {
-    grid-row: 2;
-  }
   .center-rope {
     top: 15%;
     left: 48%;
